<resources>
    <string name="app_name">CardBiz</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="check_network">Please check network connection</string>
    <!--<string name="facebook_app_id">1669861253236080</string>-->
    <string name="facebook_app_id">777259345706758</string>
    <!--<string name="facebook_app_id">1676890439191326</string>-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="title_activity_verification">VerificationActivity</string>
    <string name="action_login">Login</string>
    <string name="action_registration">Registration</string>
    <string name="action_all">All</string>
    <string name="action_paid">Paid</string>
    <string name="action_free">Free</string>
    <string name="verify_message">We have sent you an sms with a 4 digit \n verification code to your mobile. \n Please enter the code here.</string>
    <string name="empty_me_quotes">Get started by adding \n your contact card here</string>
    <string name="create_group_message">Please choose an unique name and \n a code to pass it your contacts.</string>
    <string name="join_group_message">Please ask for the group name and the code from the creator of the group.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_custom_camera">CustomCameraActivity</string>
    <string name="title_activity_mobile_no">MobileNoActivity</string>
    <string name="title_activity_country">CountryActivity</string>
    <string name="buy">Buy</string>
    <string name="my_cards">My Cards</string>
    <string name="add_new_card">Add new card</string>
    <string name="title_activity_invite_friends">InviteFriendsActivity</string>
    <string name="back">Back</string>
    <string name="leave">Leave</string>
    <string name="invite_friends">Invite Friend</string>
    <string name="user_name">User Name</string>
    <string name="title_activity_card_user">CardUserActivity</string>
    <string name="user_text">Text</string>
    <string name="card">Card</string>
    <string name="invite_cardbiz">Invite to CardBiz</string>
    <string name="card_holder">Card Holder</string>
    <string name="group">Private Group</string>
    <string name="add_new">New</string>
    <string name="create">CREATE</string>
    <string name="edit">Edit</string>
    <string name="create_card_using_photo">Create card using photo</string>
    <string name="create_card_using_templates">Create card using templates</string>
    <string name="title_activity_card_radar">CardRadarActivity</string>
    <string name="card_radar">Card Radar</string>
    <string name="title_activity_group_info">GroupInfoActivity</string>
    <string name="group_info">Private Group</string>
    <string name="group_name">Group Name</string>
    <string name="group_code">Group Code  :</string>
    <string name="group_members">Participants</string>
    <string name="title_activity_bump">BumpActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_choose_card">ChooseCardActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_capture_card">CaptureCardActivity</string>
    <string name="title_activity_shared_card_view">SharedCardViewActivity</string>
    <string name="title_activity_no_card">NoCardActivity</string>
    <string name="crash_report_message">Bug report captured on this page and details will send to server.</string>
</resources>
