<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mobellotec.cardbiz.Activity.AddNewActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/app_primary_color">

        <TextView
            android:id="@+id/home_title"
            style="@style/actionbar_title_layout"
            android:text="@string/add_new_card" />

    </RelativeLayout>

    <TextView
        android:id="@+id/takePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/add_new_take_photo"
        android:drawablePadding="20dp"
        android:gravity="left|center_vertical"
        android:padding="10dp"
        android:text="@string/create_card_using_photo"
        android:textColor="#000000"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/bottom_tab"
        android:background="#929292" />

    <TextView
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/add_new_take_photo"
        android:drawablePadding="20dp"
        android:gravity="left|center_vertical"
        android:padding="10dp"
        android:text="@string/create_card_using_templates"
        android:textColor="#000000"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/bottom_tab"
        android:background="#929292" />

</LinearLayout>
