<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_secondary_white_color"
    tools:context="com.mobellotec.cardbiz.Activity.CreateCardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:background="@color/app_primary_color">

            <TextView
                android:id="@+id/txt_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:drawableLeft="@drawable/left_arrow"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/back"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/home_title"
                style="@style/actionbar_title_layout"
                android:text="@string/group" />

        </RelativeLayout>

        <TextView
            android:id="@+id/def_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="Please choose an unique name and code \n to pass it to your contacts"
            android:textColor="@color/app_black_color"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtxt_group_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/create_group_edit_text_bg"
            android:hint="Group Name"
            android:inputType="textCapSentences"
            android:minHeight="50dp"
            android:singleLine="true" />


        <!-- <TextView
             android:id="@+id/txt_group_name_validate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:layout_marginRight="30dp"
             android:gravity="right|center_vertical"
             android:minHeight="30dp"
             android:textColor="#FF0000"
             android:visibility="gone" />

         <ProgressBar
             android:id="@+id/progress_bar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             style="?android:attr/progressBarStyleSmall"
             android:layout_marginRight="30dp"
             android:visibility="gone"
             android:gravity="right|center_vertical" />-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtxt_code_one"
                style="@style/create_group_code_txt" />

            <View
                android:layout_width="10dp"
                android:layout_height="1dp" />

            <EditText
                android:id="@+id/edtxt_code_two"
                style="@style/create_group_code_txt" />

            <View
                android:layout_width="10dp"
                android:layout_height="1dp" />

            <EditText
                android:id="@+id/edtxt_code_three"
                style="@style/create_group_code_txt" />

            <View
                android:layout_width="10dp"
                android:layout_height="1dp" />

            <EditText
                android:id="@+id/edtxt_code_four"
                style="@style/create_group_code_txt" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_create_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:gravity="center"
            android:minHeight="50dp"
            android:text="@string/create"
            android:textColor="@drawable/create_group_btn_txt_clr"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>